exec-maven plugin configuration to build a native-image executable from a module application